# netbox-librenms

./: MANIFEST.in  README.md  pyproject.toml  setup.py
netbox_librenms/: __init__.py  forms.py  models.py  navigation.py  signals.py  tables.py  template_content.py  urls.py  utils.py  views.py
netbox_librenms/api/: __init__.py  urls.py  views.py
netbox_librenms/migrations/: 0001_initial.py  __init__.py
netbox_librenms/templates/netbox_librenms/: device_interfaces.html  device_neighbors.html  device_overview.html  device_sync_status.html  interface_graph.html  role_settings.html
